--- a/templates/lab.html
+++ b/templates/lab.html
@@ -24,8 +24,8 @@
         <span class="brand-text">Eclari</span>
       </a>
       <nav class="nav">
-        <span class="chip">Labs</span>
-        <a class="button" href="{{ url_for('login') }}">Sign out</a>
+        <span class="chip">Lab Staff</span>
+        <a class="button" href="{{ url_for('logout') }}">Sign out</a>
       </nav>
     </div>
   </header>
