--- a/templates/finance.html
+++ b/templates/finance.html
@@ -25,7 +25,7 @@
       </a>
       <nav class="nav">
         <span class="chip">Finance</span>
-        <a class="button" href="{{ url_for('login') }}">Sign out</a>
+        <a class="button" href="{{ url_for('logout') }}">Sign out</a>
       </nav>
     </div>
   </header>
